--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -123,7 +123,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: center;
+  
 }
 .activity-card img {
   width: 100%;
@@ -131,6 +131,11 @@ footer {
   /* border-radius: 8px; */
   -webkit-transition: 0.2s all;
   /* -webkit-filter: brightness(70%); */
+}
+.activity-card-text{
+  display: flex;
+  justify-content: space-between;
+  margin: 4px 10px;
 }
 .activity-card img:hover {
   -webkit-filter: brightness(50%);
